--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $stepInput.on("change", function (event) {
     <h3>Sizing</h3>
     <p class="text-info">Please note: The sizing changed with version 1.11 from setting the group class in the configuration to automatically use
     the original elements class.</p>
-    <p>Sizing now works out of the box. If the original input has the class <span class="code">form-control-sm</span> or <span class="code">form-control-lg</span>,
+    <p>Sizing works out of the box. If the original input has the class <span class="code">form-control-sm</span> or <span class="code">form-control-lg</span>,
         the resulting group gets the class <span class="code">input-group-sm</span> or <span class="code">input-group-lg</span>.</p>
     <p>
         Small
