Link to the english version of shaack.com

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>bootstrap-input-spinner</h1>
     <p>
         A Bootstrap 4 / jQuery plugin to create input spinner elements for number input, by
-        <a href="https://shaack.com">shaack.com</a> engineering.
+        <a href="https://shaack.com/en">shaack.com</a> engineering.
     </p>
     <p>
         License: <a href="https://github.com/shaack/bootstrap-input-spinner/blob/master/LICENSE">MIT</a>
