--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         /*noinspection CssUnusedSymbol*/
         .input-group, input.test-value-input {
-            width: 250px;
+            max-width: 250px;
         }
 
         .code {
@@ -187,11 +187,13 @@ $inputGross.on("change", function (event) {
 &lt;/script></code></pre>
 
     <h3>Sizing</h3>
-    <p>Sizing works out of the box. Just set the original inputs class to <span class="code">form-control-sm</span> or <span class="code">form-control-lg</span>, and
-        the resulting group gets the class <span class="code">input-group-sm</span> or <span class="code">input-group-lg</span>.</p>
+    <p>Sizing works out of the box. Just set the original inputs class to <span class="code">form-control-sm</span> or
+        <span class="code">form-control-lg</span>, and
+        the resulting group gets the class <span class="code">input-group-sm</span> or <span
+                class="code">input-group-lg</span>.</p>
     <p>
         Small
-        <input class="form-control-sm" type="number"  value="0.0" data-decimals="4" min="-1" max="1" step="0.0001"/>
+        <input class="form-control-sm" type="number" value="0.0" data-decimals="4" min="-1" max="1" step="0.0001"/>
     </p>
     <pre><code class="language-html">&lt;input class="form-control-sm" type="number" value="0.0" data-decimals="4" min="-1" max="1" step="0.0001"/></code></pre>
     <p>
@@ -201,44 +203,54 @@ $inputGross.on("change", function (event) {
     <pre><code class="language-html">&lt;input class="form-control-lg" type="number" value="1000000" data-decimals="0" min="0" max="2000000" step="1"/></code></pre>
 
 
-    <h3>Dynamically handling of <span class="code">min</span>, <span class="code">max</span> and <span
-            class="code">step</span></h3>
+    <h3>Dynamically handling of <span class="code">min</span>, <span class="code">max</span>, <span
+            class="code">step</span> and <span class="code">data-decimals</span></h3>
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <p>
                 <label for="minInput">min</label>
                 <input id="minInput" type="text" class="form-control test-value-input" value="0"/>
             </p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <p>
                 <label for="maxInput">max</label>
                 <input id="maxInput" type="text" class="form-control test-value-input" value="100"/>
             </p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <p>
                 <label for="stepInput">step</label>
                 <input id="stepInput" type="text" class="form-control test-value-input" value="10"/>
             </p>
         </div>
+        <div class="col-lg-3">
+            <p>
+                <label for="dataDecimalsInput">data-decimals</label>
+                <input id="dataDecimalsInput" type="text" class="form-control test-value-input" value="2"/>
+            </p>
+        </div>
     </div>
     <p>
         <label for="minMaxTester">Try here</label>
-        <input id="minMaxTester" type="number" value="50" min="0" max="100" step="10"/>
+        <input id="minMaxTester" type="number" value="50" min="0" max="100" step="10" data-decimals="2"/>
     </p>
     <pre><code class="language-javascript">var $minInput = $("#minInput")
 var $maxInput = $("#maxInput")
 var $stepInput = $("#stepInput")
+var $dataDecimalsInput = $("#dataDecimalsInput")
 var $minMaxTester = $("#minMaxTester")
 $minInput.on("change", function (event) {
-    $minMaxTester.prop("min", $minInput.val())
+    $minMaxTester.attr("min", $minInput.val())
 })
 $maxInput.on("change", function (event) {
-    $minMaxTester.prop("max", $maxInput.val())
+    $minMaxTester.attr("max", $maxInput.val())
 })
 $stepInput.on("change", function (event) {
-    $minMaxTester.prop("step", $stepInput.val())
+    $minMaxTester.attr("step", $stepInput.val())
+})
+$dataDecimalsInput.on("change", function (event) {
+    $minMaxTester.attr("data-decimals", $dataDecimalsInput.val())
 })
 </code></pre>
 
@@ -319,15 +331,19 @@ $inputLoop.on("change", function (event) {
     var $minInput = $("#minInput")
     var $maxInput = $("#maxInput")
     var $stepInput = $("#stepInput")
+    var $dataDecimalsInput = $("#dataDecimalsInput")
     var $minMaxTester = $("#minMaxTester")
     $minInput.on("change", function (event) {
-        $minMaxTester.prop("min", $minInput.val())
+        $minMaxTester.attr("min", $minInput.val())
     })
     $maxInput.on("change", function (event) {
-        $minMaxTester.prop("max", $maxInput.val())
+        $minMaxTester.attr("max", $maxInput.val())
     })
     $stepInput.on("change", function (event) {
-        $minMaxTester.prop("step", $stepInput.val())
+        $minMaxTester.attr("step", $stepInput.val())
+    })
+    $dataDecimalsInput.on("change", function (event) {
+        $minMaxTester.attr("data-decimals", $dataDecimalsInput.val())
     })
 </script>
 <!--suppress JSUnusedLocalSymbols -->
