--- a/index.html
+++ b/index.html
@@ -285,6 +285,24 @@ $inputLoop.on("change", function (event) {
     $inputLoop.val(value)
 })</code></pre>
 
+    <h3>Change min max and value</h3>
+    <p>This is for testing <a href="https://github.com/shaack/bootstrap-input-spinner/issues/45">Issue #45</a></p>
+    <div class="mb-3">
+        <input type="number" id="minMaxValue"/>
+    </div>
+    <button id="buttonTest1" class="btn btn-primary">test1</button>
+    <button id="buttonTest2" class="btn btn-primary">test2</button>
+    <pre>
+<code class="language-javascript">$("#buttonTest1").click(function() {
+    $("#minMaxValue").attr("min", 11)
+    $("#minMaxValue").attr("max", 1000)
+    $("#minMaxValue").val(45)
+})
+$("#buttonTest2").click(function() {
+    $("#minMaxValue").attr("min", 1)
+    $("#minMaxValue").attr("max", 10)
+    $("#minMaxValue").val(5)
+})</code></pre>
     <h2>Thats all for now</h2>
     <p>If you like this plugin you may also want to check out our <a
             href="https://shaack.com/projekte/bootstrap-show-modal/">bootstrap-show-modal</a>.</p>
@@ -364,6 +382,18 @@ $inputLoop.on("change", function (event) {
         var value = $inputLoop.val()
         value = (value < 0) ? 360 + parseInt(value, 10) : value % 360
         $inputLoop.val(value)
+    })
+</script>
+<script>
+    $("#buttonTest1").click(function() {
+        $("#minMaxValue").attr("min", 11)
+        $("#minMaxValue").attr("max", 1000)
+        $("#minMaxValue").val(45)
+    })
+    $("#buttonTest2").click(function() {
+        $("#minMaxValue").attr("min", 1)
+        $("#minMaxValue").attr("max", 10)
+        $("#minMaxValue").val(5)
     })
 </script>
 </body>
