--- a/index.html
+++ b/index.html
@@ -284,9 +284,8 @@ $inputLoop.on("change", function (event) {
     value = (value < 0) ? 360 + parseInt(value, 10) : value % 360
     $inputLoop.val(value)
 })</code></pre>
-
     <h3>Change min max and value</h3>
-    <p>This is for testing <a href="https://github.com/shaack/bootstrap-input-spinner/issues/45">Issue #45</a></p>
+    <p>This is for testing <a href="https://github.com/shaack/bootstrap-input-spinner/issues/45">issue #45</a></p>
     <div class="mb-3">
         <input type="number" id="minMaxValue"/>
     </div>
