Documentation of the "destroy" method.

--- a/index.html
+++ b/index.html
@@ -285,9 +285,7 @@ $inputLoop.on("change", function (event) {
     $inputLoop.val(value)
 })</code></pre>
     <h3>Destroying the spinner</h3>
-    <p>Destroying the bootstrap-input-spinner removes the spinner and shows the original element, like before calling
-        <span class="code">element.inputSpinner()</span>.</p>
-    <p>Just call</p>
+    <p>To Remove the InputSpinner and show the original input element, use</p>
     <pre><code class="language-javascript">$(element).inputSpinner("destroy")</code></pre>
     <div class="mb-3">
         <input type="number" id="inputDestroyCreate" value="50"/>
