--- a/index.html
+++ b/index.html
@@ -292,9 +292,21 @@ $inputLoop.on("change", function (event) {
     </div>
     <button id="buttonDestroy" class="btn btn-primary">destroy</button>
     <button id="buttonCreate" disabled="disabled" class="btn btn-primary">re-create</button>
-    <h2>Thats all for now</h2>
-    <p>If you like this plugin you may also want to check out our <a
-            href="https://shaack.com/projekte/bootstrap-show-modal/">bootstrap-show-modal</a>.</p>
+    <h2>Thats all about the inputSpinner, but we have more</h2>
+
+    <p>You may also want to check out our other Bootstrap 4 extensions</p>
+    <ul>
+        <li>
+            <a href="https://shaack.com/projekte/bootstrap-input-spinner/">bootstrap-input-spinner</a>
+        </li>
+        <li>
+            <a href="https://shaack.com/projekte/bootstrap-show-modal/">bootstrap-show-modal</a>
+        </li>
+        <li>
+            <a href="https://github.com/shaack/bootstrap-detect-breakpoint">bootstrap-detect-breakpoint</a>
+        </li>
+    </ul>
+
     <p>And if you find bugs or have suggestions, you may write an
         <a href="https://github.com/shaack/bootstrap-input-spinner/issues">issue</a>.</p>
     <br/><br/>
