A little marketing for https://shaack.com/en/open-source-components

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ $inputLoop.on("change", function (event) {
                 <b>bootstrap-show-modal</b>,
                 <b>bootstrap-detect-breakpoint</b>,
                 <b>auto-resize-textarea</b> and
-                <b>external-links-blank</b>
+                <b>external-links-blank</b>.
 
         </div>
         </a>
