--- a/index.html
+++ b/index.html
@@ -297,15 +297,26 @@ $inputLoop.on("change", function (event) {
     <input data-prefix="¥" id="templateButtonsRight" value="1000"/>
     </p>
     <p>
-    Here is the template for "buttons right":
+    This is the template for "buttons right":
     </p>
     <pre><code class="language-html">&lt;div class="input-group ${groupClass}">
-&lt;div class="input-group-prepend">&lt;/div>' +
+&lt;div class="input-group-prepend">&lt;/div>
 &lt;input type="text" inputmode="decimal" style="text-align: ${textAlign}" class="form-control"/>
 &lt;div class="input-group-append">
 &lt;button style="min-width: ${buttonsWidth}" class="btn btn-decrement ${buttonsClass}" type="button">${decrementButton}&lt;/button>
 &lt;button style="min-width: ${buttonsWidth}" class="btn btn-increment ${buttonsClass}" type="button">${incrementButton}&lt;/button>
 &lt;/div>&lt;/div></code></pre>
+    <p>You can... or must use the following variables in your template:</p>
+    <ul>
+        <li>${groupClass}</li>
+        <li>${textAlign}</li>
+        <li>${buttonsWidth}</li>
+        <li>${buttonsClass}</li>
+        <li>${decrementButton}</li>
+        <li>${incrementButton}</li>
+    </ul>
+    <p>Provide the template as configuration parameter:</p>
+    <pre><code class="language-js">$("#specialInput").inputSpinner({template: '&lt;div class...'})</code></pre>
     <h3>Destroying the spinner</h3>
     <p>To Remove the InputSpinner and show the original input element, use</p>
     <pre><code class="language-javascript">$(element).inputSpinner("destroy")</code></pre>
