--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ $inputLoop.on("change", function (event) {
         <li>${incrementButton}</li>
     </ul>
     <p>Provide the template as configuration parameter:</p>
-    <pre><code class="language-js">$("#specialInput").inputSpinner({template: '&lt;div class...'})</code></pre>
+    <pre><code class="language-js">$(element).inputSpinner({template: '&lt;div class...'})</code></pre>
     <h3>Destroying the spinner</h3>
     <p>To Remove the InputSpinner and show the original input element, use</p>
     <pre><code class="language-javascript">$(element).inputSpinner("destroy")</code></pre>
