Styling with templates, better documentation

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ $inputLoop.on("change", function (event) {
 
     <h3>Styling with templates (New!)</h3>
     <p>With the new templating feature, you can almost do <b>anything, when it comes to layout</b>.</p>
-    <h5>How about... buttons right.</h5>
+    <h5>How about... buttons right</h5>
     <p>
     <input data-prefix="¥" id="templateButtonsRight" value="1000"/>
     </p>
