added test for 0.01 start value an step of 1

--- a/test-native.html
+++ b/test-native.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <h1>This is just for testing the behaviour of the native number input</h1>
+<p>step 1, start value 1.01<br/>
+    <input type="number" step="1" min="0" max="100" value="1.01"/>
+</p>
 <p>step 2, min 0<br/>
     <input type="number" step="2" min="0" max="100"/>
 </p>
