"No attributes" example added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
     <h2>Examples</h2>
     <p>The following contains examples of the InputSpinner's main features</p>
 
+    <h3>No attributes</h3>
+    <p>
+        <input type="number"/>
+    </p>
+    <pre><code
+            class="language-html">&lt;input type="number"/></code></pre>
+
+
     <h3>Simple Integer</h3>
     <p>
         <input type="number" value="500" min="0" max="1000" step="10"/>
