--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         License: <a href="https://github.com/shaack/bootstrap-input-spinner/blob/master/LICENSE">MIT</a>
     </p>
     <h2>Features</h2>
-    <p>The Bootstrap 4 InputSpinner is</p>
+    <p>The Bootstrap 4 InputSpinner</p>
     <ul>
         <li>
-            <b>mobile friendly</b> and <b>responsive</b>,
+            is <b>mobile friendly</b> and <b>responsive</b>,
         </li>
         <li>
             automatically changes value when <b>holding button</b>, boosts value change when holding button longer,
@@ -57,21 +57,23 @@
             allows setting a <b>prefix</b> or a <b>suffix</b> text in the input,
         </li>
         <li>
-            handles <b><span class="code">val()</span></b> like the native element,
+            handles <code>val()</code> like the native element,
         </li>
         <li>
-            <b>dynamically handles</b> changing <b>attribute values</b> like <span class="code">disabled</span> oder
-            <span class="code">class</span>,
+            <b>dynamically handles</b> changing <b>attribute values</b> like <code>disabled</code> oder
+            <code>class</code>,
         </li>
         <li>
-            dispatches <span class="code">change</span> and <span class="code">input</span> <b>events on value
-            change</b>
-            like the native element.
+            dispatches <code>change</code> and <code>input</code> <b>events on value
+            change</b> like the native element,
+        </li>
+        <li>
+            <b>needs no extra css</b>, just Bootstrap 4 and one js file.
         </li>
     </ul>
     <h2>Usage</h2>
     <p>
-        This script enables the InputSpinner for all inputs with <span class="code">type='number'</span> on this page.
+        This script enables the InputSpinner for all inputs with <code>type='number'</code> on this page.
         <b>No extra css needed</b>, just Bootstrap 4.
     </p>
     <pre><code class="language-html">&lt;script src="./src/bootstrap-input-spinner.js">&lt;/script>
@@ -108,12 +110,12 @@
     <pre><code
             class="language-html">&lt;input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/></code></pre>
 
-    <h3>Handle <span class="code">change</span> and <span class="code">input</span> events and
+    <h3>Handle <code>change</code> and <code>input</code> events and
         read the value from JavaScript
-        with <span class="code">val()</span></h3>
+        with <code>val()</code></h3>
     <p>
-        Type in a number to see the difference between <span class="code">change</span> and <span
-            class="code">input</span> events.
+        Type in a number to see the difference between <code>change</code> and
+        <code>input</code> events.
         <input type="number" id="changedInput" value="2500" min="0" max="5000000" data-decimals="2"/>
     </p>
     <p>
@@ -129,7 +131,7 @@ $changedInput.on("input", function (event) {
 $changedInput.on("change", function (event) {
     $valueOnChange.html($changedInput.val())
 })</code></pre>
-    <h3>Programmatic changing the value with <span class="code">val()</span></h3>
+    <h3>Programmatic changing the value with <code>val()</code></h3>
     <p>
         Net
         <input type="number" id="inputNet" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
@@ -144,7 +146,7 @@ $changedInput.on("change", function (event) {
 $inputGross.on("change", function (event) {
     $inputNet.val($inputGross.val() / 1.19)
 })</code></pre>
-    <h3>Attributes <span class="code">placeholder</span> and <span class="code">required</span></h3>
+    <h3>Attributes <code>placeholder</code> and <code>required</code></h3>
     <form>
         <p>
             <input placeholder="Enter a number" required type="number" value="" min="-100" max="100"/>
@@ -154,7 +156,7 @@ $inputGross.on("change", function (event) {
         <input type="submit" id="submitButton" class="btn btn-primary mb-4" value="Submit to test empty input"/>
     </form>
 
-    <h3>Attribute <span class="code">disabled</span>, dynamically changing</h3>
+    <h3>Attribute <code>disabled</code>, dynamically changing</h3>
     <p>Attributes are handled dynamically.</p>
     <form>
         <p>
@@ -178,7 +180,16 @@ $inputGross.on("change", function (event) {
 &lt;/script></code></pre>
     </form>
 
-    <h3>Dynamically handling of the <span class="code">class</span> attribute</h3>
+    <h3><code>buttonsOnly</code> mode (New!)</h3>
+    <p>
+        In <code>buttonsOnly</code> mode no direct text input is allowed, the text-input
+        gets the attribute <code>readOnly</code>. But the plus and minus buttons still allow to change the value.
+    </p>
+    <p>
+        <input class="buttons-only" value="5" min="1" max="10"/>
+    </p>
+
+    <h3>Dynamically handling of the <code>class</code> attribute</h3>
     <p>
         <input id="inputChangeClass" class="is-valid" type="number" value="50"/>
     </p>
@@ -200,10 +211,9 @@ $inputGross.on("change", function (event) {
 &lt;/script></code></pre>
 
     <h3>Sizing</h3>
-    <p>Sizing works out of the box. Just set the original inputs class to <span class="code">form-control-sm</span> or
-        <span class="code">form-control-lg</span>, and
-        the resulting group gets the class <span class="code">input-group-sm</span> or <span
-                class="code">input-group-lg</span>.</p>
+    <p>Sizing works out of the box. Just set the original inputs class to <code>form-control-sm</code> or
+        <code>form-control-lg</code>, and
+        the resulting group gets the class <code>input-group-sm</code> or <code>input-group-lg</code>.</p>
     <p>
         Small
         <input class="form-control-sm" type="number" value="0.0" data-decimals="4" min="-1" max="1" step="0.0001"/>
@@ -216,8 +226,8 @@ $inputGross.on("change", function (event) {
     <pre><code class="language-html">&lt;input class="form-control-lg" type="number" value="1000000" data-decimals="0" min="0" max="2000000" step="1"/></code></pre>
 
 
-    <h3>Dynamically handling of <span class="code">min</span>, <span class="code">max</span>, <span
-            class="code">step</span> and <span class="code">data-decimals</span></h3>
+    <h3>Dynamically handling of <code>min</code>, <code>max</code>,
+        <code>step</code> and <code>data-decimals</code></h3>
     <div class="row">
         <div class="col-lg-3">
             <p>
@@ -282,15 +292,15 @@ $dataDecimalsInput.on("change", function (event) {
             class="language-html">&lt;input data-suffix="°C" value="50" min="0" max="100" type="number" /></code></pre>
 
 
-    <h3>Attribute <span class="code">data-step-max</span> and looping the value</h3>
+    <h3>Attribute <code>data-step-max</code> and looping the value</h3>
     <p>This Input starts from 0 when reaching 360.</p>
     <p>
         <input type="number" id="inputLoop" value="0" data-decimals="0" min="-10" max="360" step="1"
                data-step-max="10"/>
     </p>
-    <p>Use the <span class="code">data-step-max</span> attribute to limit the step velocity.</p>
+    <p>Use the <code>data-step-max</code> attribute to limit the step velocity.</p>
     <pre><code class="language-html">&lt;input step="1" data-step-max="10" type="number" id="inputLoop" value="0" data-decimals="0" min="-10" max="360"/&gt;</code></pre>
-    <p>"Loop" the value between 0 and 360 with the <span class="code">change</span> event in JavaScript.</p>
+    <p>"Loop" the value between 0 and 360 with the <code>change</code> event in JavaScript.</p>
     <pre><code class="language-javascript">var $inputLoop = $("#inputLoop")
 $inputLoop.on("change", function (event) {
     var value = $inputLoop.val()
@@ -339,11 +349,8 @@ $inputLoop.on("change", function (event) {
         <div class="card-body">
             <h4 class="mb-2">More Bootstrap 4 Components (from shaack.com)</h4>
             You may want to check out our further Bootstrap 4 extensions,
-                <b>bootstrap-show-modal</b>,
-                <b>bootstrap-detect-breakpoint</b>,
-                <b>auto-resize-textarea</b> and
-                <b>external-links-blank</b>.
-
+                <b>bootstrap-show-modal</b> and
+                <b>bootstrap-detect-breakpoint</b>.
         </div>
         </a>
     </div>
@@ -358,6 +365,7 @@ $inputLoop.on("change", function (event) {
 <script src="./node_modules/prismjs/prism.js"></script>
 <script>
     $("input[type='number']").inputSpinner()
+    $(".buttons-only").inputSpinner({buttonsOnly: true})
 </script>
 <script>
     var $inputChangeClass = $("#inputChangeClass")
