--- a/test-native.html
+++ b/test-native.html
@@ -40,16 +40,24 @@
 <body>
 <h1>This is for testing the behaviour of the native number input, compared to the bootstrap-input-spinner.</h1>
 First: Native Element, second: bootstrap-input-spinner.
-<h3>step 1, start value 1.01</h3>
+<h3>step 1, value 1.01</h3>
 <p>
     <input type="number" step="1" value="1.01"/>
     <input type="number" class="bootstrap-input-spinner" step="1" value="1.01"/>
 </p>
+
+<h3>step 2, min 5.01</h3>
+<p>
+    <input type="number" step="2" min="5.01"/>
+    <input type="number" class="bootstrap-input-spinner" step="2" min="5.01"/>
+</p>
+
 <h3>step 2, min 0</h3>
 <p>
     <input type="number" step="2" min="0" max="100"/>
     <input type="number" class="bootstrap-input-spinner" step="2" min="0" max="100"/>
 </p>
+
 <h3>step 10, min 1</h3>
 <p>
     <input type="number" step="10" min="1" max="100"/>
