added no attributes example

--- a/test-native.html
+++ b/test-native.html
@@ -40,6 +40,14 @@
 <body>
 <h1>This is for testing the behaviour of the native number input, compared to the bootstrap-input-spinner.</h1>
 First: Native Element, second: bootstrap-input-spinner.
+
+<h3>No attributes</h3>
+<p>
+    <input type="number"/>
+    <input type="number" class="bootstrap-input-spinner"/>
+</p>
+
+
 <h3>step 1, value 1.01</h3>
 <p>
     <input type="number" step="1" value="1.01"/>
