--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             has <b>internationalized</b> number formatting,
         </li>
         <li>
-            automatically changes value when <b>holding button</b>, boosts value change when holding button longer,
+            automatically changes the value when <b>holding a button</b>,
         </li>
         <li>
             allows setting a <b>prefix</b> or <b>suffix</b> text in the input,
@@ -68,7 +68,7 @@
             change</b> like the native element,
         </li>
         <li>
-            <b>needs no extra css</b>, just Bootstrap 4 and one js file.
+            <b>needs no extra css</b>, just Bootstrap 4.
         </li>
     </ul>
     <h2>Usage</h2>
