--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ $inputGross.on("change", function (event) {
     <h3><code>buttonsOnly</code> mode (New!)</h3>
     <p>
         In <code>buttonsOnly</code> mode no direct text input is allowed, the text-input
-        gets the attribute <code>readOnly</code>. But the plus and minus buttons still allow to change the value.
+        gets the attribute <code>readonly</code>. But the plus and minus buttons still allow to change the value.
     </p>
     <p>
         <input class="buttons-only" value="5" min="1" max="10"/>
