--- a/test-native.html
+++ b/test-native.html
@@ -54,24 +54,24 @@ First: Native Element, second: bootstrap-input-spinner.
     <input type="number" class="bootstrap-input-spinner" step="1" value="1.01"/>
 </p>
 
-<h3>step 2, min 5.01</h3>
+<h3>step 2, value 6, min 5.01</h3>
 <p>
-    <input type="number" step="2" min="5.01"/>
-    <input type="number" class="bootstrap-input-spinner" step="2" min="5.01"/>
+    <input type="number" step="2" min="5.01" value="6"/>
+    <input type="number" class="bootstrap-input-spinner" step="2" min="5.01" value="6"/>
 </p>
 
-<h3>step 2, min 0</h3>
+<h3>step 2, min 0, max 9.5</h3>
 <p>
-    <input type="number" step="2" min="0" max="100"/>
-    <input type="number" class="bootstrap-input-spinner" step="2" min="0" max="100"/>
+    <input type="number" step="2" min="0" max="9.5"/>
+    <input type="number" class="bootstrap-input-spinner" step="2" min="0" max="9.5"/>
 </p>
 
-<h3>step 10, min 1</h3>
+<h3>step 10, min 1, max 49</h3>
 <p>
-    <input type="number" step="10" min="1" max="100"/>
-    <input type="number" class="bootstrap-input-spinner" step="10" min="1" max="100"/>
+    <input type="number" step="10" min="1" max="49"/>
+    <input type="number" class="bootstrap-input-spinner" step="10" min="1" max="49"/>
 </p>
-<h3>step 20, min -99</h3>
+<h3>step 20, min -99, max 100</h3>
 <p>
     <input type="number" step="20" min="-99" max="100"/>
     <input type="number" class="bootstrap-input-spinner" step="20" min="-99" max="100"/>
